--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
     "twig/twig": "^2.0",
     "php-di/php-di": "^6.0",
     "symfony/event-dispatcher": "^3.3",
-    "illuminate/support": "^5.7"
+    "illuminate/support": "^5.7",
+    "offbeatwp/framework": "dev-master"
   }
 }
